@@ -1007,6 +1007,9 @@ class _DummyThread(Thread):
     def _set_daemon(self):
         return True
 
+    def _stop(self):
+        pass
+
     def join(self, timeout=None):
         assert False, "cannot join a dummy thread"
 
