@@ -47,6 +47,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #14308: Fix an exception when a "dummy" thread is in the threading
+  module's active list after a fork().
+
 - Issue #14538: HTMLParser can now parse correctly start tags that contain
   a bare '/'.
 
